--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; img-src 'self' data: blob:; style-src 'self' 'unsafe-inline'">
-    <script src='dist/phaser.js'></script>
-    <script type='module' src='./sources/main_game.js'></script>
+    <script src='./dist/phaser.js'></script>
+    <script type='module' src='./src/startup.js'></script>
   </head>
   <body>
   </body>
